--- a/vue-music/src/assets/less/variable.less
+++ b/vue-music/src/assets/less/variable.less
@@ -4,12 +4,13 @@
 @color-background-w:#f5f5f5;
 @color-highlight-background : #333;
 @color-dialog-background : #666;
+@color-bg-highlight:#f9f9f9;
 @color-theme : hsl(45, 100%, 60%);
 @color-theme-d : rgba(255, 205, 49, 0.5);
 @color-sub-theme : #d93f30;
 @color-text : #fff;
 @color-text-d : rgba(255, 255, 255, 0.3);
-@color-text-l : rgba(255, 255, 255, 0.5);
+@color-text-l : white;
 @color-text-ll : rgba(255, 255, 255, 0.8);
 
 //字体定义规范
